--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -18,6 +18,6 @@
     each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls
     on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.
 
-    <p color="blue"> Random Change</p>
+    <p color="blue"> Random Change it</p>
   </body>
 </html>
