--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -4,20 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Onion Soup Recipe</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    French Onion Soup We have been trying French onion soup in restaurants for years and my family and friends agree
-    none can compare to my recipe for taste and simplicity of preparation. Ingredients 1/2 cup unsalted butter 2
-    tablespoons olive oil 4 cups sliced onions 4 (10.5 ounce) cans beef broth 2 tablespoons dry sherry (optional) 1
-    teaspoon dried thyme salt and pepper to taste 4 slices French bread 4 slices provolone cheese 2 slices Swiss cheese,
-    diced 1/4 cup grated Parmesan cheese Directions Melt butter with olive oil in an 8 quart stock pot on medium heat.
-    Add onions and continually stir until tender and translucent. Do not brown the onions. Add beef broth, sherry and
-    thyme. Season with salt and pepper, and simmer for 30 minutes. Heat the oven broiler. Ladle soup into oven safe
-    serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer
-    each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls
-    on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.
+    <section>
+      <div id="main-photo" >
+        
+        <h1 id="title">Frennch Onion Soup</h1>
 
-    <p color="blue"> Random Change it</p>
+      </div>
+
+      <div>
+
+        <h3>We have been trying French Onion Soup in restaurants and my family and friends agree none can compare to my recipe for taste and simplicity of preparation.</h3>
+
+      </div>
+
+      <img src="../french-soup/images/cooking-info.png" alt="cooking-info" id="cooking-info">
+
+
+
+    </section>
+
+    <hr>
+
+    <section>
+      <h3>Ingredients</h3>
+
+    <ul>
+        <li class="li-font">1/cup of unsalted butter</li>
+        <li class="li-font">2 tablespoon olive oil</li>
+        <li class="li-font">4 cups sliced onions</li>
+        <li class="li-font">4 (10.5 ounce) cans beef broth</li>
+        <li class="li-font">2 tablespoon dried sherry (optional)</li>
+        <li class="li-font">1 teaspoon dried thyme</li>
+        <li class="li-font">Salt and pepper to taste</li>
+        <li class="li-font">4 slices french bread</li>
+        <li class="li-font">4 slices provolone cheese</li>
+        <li class="li-font">4 slices swiss cheese, diced</li>
+        <li class="li-font">1/4 cup grated parmesan cheese</li>
+    </ul>
+
+
+
+    </section>
+
+    <hr>
+
+    <section>
+
+      <h3>Directions</h3>
+
+      <ol>
+        <li class="ol-li">Melt butter with olive oil in an 8 quart stock pot on medium heat.
+          Add onions and continually stir until tender and translucent. Do not brown the onions. </li>
+        <li class="ol-li">Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30 minutes.</li>
+        <li class="ol-li">Heat the oven broiler.</li>
+        <li class="ol-li">Ladle soup into oven safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.</li>
+      </ol>
+
+
+
+
+
+
+    </section>
+
+<img src=lab-css-recipes-clone-class01/french-soup/images/soup.jpg>
+
   </body>
 </html>
